@@ -23,11 +23,39 @@
     <layout class="QGridLayout" name="variableLayout" />
    </item>
    <item>
-    <widget class="QLabel" name="MembersLabel" >
-     <property name="text" >
-      <string>Members</string>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout" >
+     <item>
+      <widget class="QLabel" name="MembersLabel" >
+       <property name="text" >
+        <string>Members</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer" >
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0" >
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QToolButton" name="RemoveMemberButton" >
+       <property name="text" >
+        <string>...</string>
+       </property>
+       <property name="icon" >
+        <iconset resource="Icons/AllIcons.qrc" >
+         <normaloff>:/Icons/small-remove.xpm</normaloff>:/Icons/small-remove.xpm</iconset>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="QTableView" name="MembersView" >
