@@ -49,6 +49,8 @@ class PropertiesDock : public MDockAncestor
 	public slots:
 		void on_TrackPointLat_editingFinished();
 		void on_TrackPointLon_editingFinished();
+		void on_Member_customContextMenuRequested(const QPoint & pos);
+		void on_RemoveMemberButton_clicked();
 		void on_RemoveTagButton_clicked();
 		void on_SelectionList_itemSelectionChanged();
 		void on_SelectionList_itemDoubleClicked(QListWidgetItem* item);
